contact info form element created

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
         margin: 0 auto;
         max-width: 768px;
         font-family: 'Roboto', sans-serif;
-        font-weight: 300;
+        font-weight: 400;
         background:  #d3e7f1;
         color: #354;
     }
@@ -17,47 +17,37 @@
         border: 1px solid rgb(19, 7, 121);
     }
   
-    #email {
-        width: 100%;
-    }
-    
     .banner {
         text-align: center;
         text-transform: uppercase;
         background: #111;
         color: #f9f4f0;
         max-width: 100%;
-        padding: 1rem;
+        padding: 0.5rem;
     }
 
     .signup {
         text-align: center;
-        padding-top: 1em;
-        border-bottom: 2px solid #111 ;
+        padding-top: 0.5em;
      }
 
     .signup p {
         padding-bottom: 1.5em;
-        border-bottom: 4px solid #111 ;
+        border-bottom: 5px double #111 ;
     }
 
     label {
         margin-bottom: 10px;
-        font-weight: 400;
-
+        font-weight: 700;
     }
 
     .contact-info {
         padding: 50px;
     }
       
-    .contact-info .flex-pair {
+   .flex-pair {
         display: flex;
         flex-direction: column;
-    }
-      
-      .contact-info label {
-        margin-bottom: 10px;
     }
       
     .contact-info input {
@@ -65,18 +55,6 @@
         margin-bottom: 15px;
     }
 
-
-/* textarea {
-    height: 100px;
-}
-button {
-    width: 100%;
-    max-width: 430px;
-    padding: 12px 0;
-    font-size: 18px;
-    border: none;
-    border-radius: 8px;
-    margin: 1.5rem auto 2.5rem;
-    display: block;
-    cursor: pointer;
-} */
+    .contact-info legend {
+        font-weight: 700;
+    }
