--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
     html {font-size: 18px;}
 
     body {
-        margin: 0 auto;
         max-width: 768px;
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
@@ -17,6 +16,16 @@
         font-size: 1.2em;
     }    
  
+    h2 {
+        font-weight: 700;
+        margin-top: 5px;
+        }
+
+    h4 {
+        font-weight: 400;
+        margin-bottom: 0;
+            }
+
     .banner {
         text-align: center;
         text-transform: uppercase;
@@ -42,23 +51,35 @@
         margin-top: 3px;
        }
 
-    label {
-        margin-bottom: 10px;
-        font-weight: 700;
+    .flex-pair {
+        display: flex;
+        flex-direction: column;
     }
-
-    .contact-info {
-        padding: 50px;
-    }
-
+    
     .contact-info legend {
-        padding-top: 20px;
+        padding-top: 15px;
         font-size: 1.4em;
         font-weight: 700;
+        margin-bottom: 20px;
     }  
 
+    .contact-info input, 
+    select {
+        height: 50px;
+        margin-bottom: 15px;
+    }
+
    fieldset {
-       border: none;
+        border: none;
+   }
+
+   .registration {
+       padding: 0 5% 0;
+   }
+
+   #other_topics {
+        width: 100%;
+        height: 100px;
    }
 
     input[placeholder="Required  "] {
@@ -71,13 +92,28 @@
         width: 33.33%;
     } 
 
-   .flex-pair {
-        display: flex;
-        flex-direction: column;
+
+     
+    .choices, 
+    .format {
+        line-height: 2;
     }
-      
-    .contact-info input, 
-    select {
-        height: 50px;
-        margin-bottom: 15px;
+
+
+
+    button {
+        color: white;
+        background: rgb(44, 156, 128);
+        width: 100%;
+        max-width: 768px;
+        padding: 12px 0;
+        border-radius: 8px;
+        margin: 1.5em auto 1em;
+        display: block;
+        cursor: pointer;
+    }
+
+    .copyright {
+        text-align: center;
+        font-size: 0.75em;
     }
