--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
  
     h2 {
         font-weight: 700;
-        margin-top: 5px;
+        margin-top: 30px;
         }
 
     h4 {
@@ -41,9 +41,9 @@
      }
 
     .signup p {
-        padding-bottom: 1.5em;
+        padding-bottom: 2em;
         border-bottom: 4px solid #111 ;
-        margin-bottom: 0;
+        margin-bottom: 1px;
        }
 
     hr {
@@ -55,7 +55,7 @@
         display: flex;
         flex-direction: column;
     }
-    
+
     .contact-info legend {
         padding-top: 15px;
         font-size: 1.4em;
@@ -67,6 +67,7 @@
     select {
         height: 50px;
         margin-bottom: 15px;
+        width: 100%;
     }
 
    fieldset {
@@ -92,24 +93,17 @@
         width: 33.33%;
     } 
 
-
-     
     .choices, 
     .format {
         line-height: 2;
     }
 
-
-
     button {
         color: white;
         background: rgb(44, 156, 128);
         width: 100%;
-        max-width: 768px;
         padding: 12px 0;
         border-radius: 8px;
-        margin: 1.5em auto 1em;
-        display: block;
         cursor: pointer;
     }
 
@@ -117,3 +111,21 @@
         text-align: center;
         font-size: 0.75em;
     }
+
+    /* Media Query */
+
+    @media (min-width: 768px) {
+
+        .flex-pair {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin: auto;
+        }
+
+        .contact-info input, 
+        select {
+        width: 75%;
+        }
+
+   }
