--- a/css/styles.css
+++ b/css/styles.css
@@ -129,13 +129,22 @@
         .flex-pair {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            /* justify-content: space-between; */
             margin: auto;
         }
 
-        .contact-info input, 
-        select {
-        width: 85%;
-        }
+        .contact-info input,
+        .contact-info select {
+        flex-grow: 1;
+        flex-basis: 75%;
+      }
 
+        .contact-info label {
+        flex-basis: 25%;
+      }
+
+
+        #zip {
+            max-width: 25%;
+        }
    }
