--- a/css/styles.css
+++ b/css/styles.css
@@ -116,34 +116,29 @@
     @media (min-width: 768px) {
 
         .registration,
-   
         .signup p {
             width: 80%;
             margin: auto;
         }
 
-        .signup p {
+        /* .signup p {
             margin-bottom: 2px;
-           }
+           } */
     
         .flex-pair {
             display: flex;
             flex-direction: row;
-            /* justify-content: space-between; */
-            margin: auto;
         }
 
         .contact-info input,
         .contact-info select {
         flex-grow: 1;
-        flex-basis: 75%;
+        flex-basis: 80%;
       }
 
         .contact-info label {
-        flex-basis: 25%;
+        flex-basis: 20%;
       }
-
-
         #zip {
             max-width: 25%;
         }
