--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@
     body {
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
-        background:  #d3e7f1;
-        color: #354;
+        background:  #a9d7ee;
     }
 
     h1 {
@@ -23,7 +22,7 @@
     h4 {
         font-weight: 400;
         margin-bottom: 0;
-            }
+        }
 
     .banner {
         text-align: center;
@@ -38,7 +37,6 @@
         text-align: center;
         padding-top: 0.5em;
      }
-
 
     .signup p:after { 
         content: ""; 
@@ -71,6 +69,7 @@
         height: 50px;
         margin-bottom: 15px;
         width: 100%;
+        background-color: rgb(248, 248, 242);
     }
 
    fieldset {
