--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,14 @@
         background-color: rgb(248, 248, 242);
     }
 
+    input:focus,
+    select:focus, 
+    textarea:focus {
+        background: rgb(230, 230, 241);
+    }
+
+
+
    fieldset {
         border: none;
    }
