--- a/css/styles.css
+++ b/css/styles.css
@@ -129,11 +129,13 @@
         .registration {
            margin: auto;
            width: 70%;
+           border-width: 70%;
         }
 
         .signup {
             width: 70%;
-            margin: auto auto 2px;
+             margin: auto auto 2px;
+             border-width: 70%;
         }
 
         .flex-pair {
