--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,8 @@
 
         .registration {
            margin: auto;
+           padding-left: 0;
+           padding-right: 0;
            width: 70%;
         }
 
