--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@
     select:focus, 
     textarea:focus {
         background: rgb(230, 230, 241);
+        transition: background-color 1000ms linear;
     }
 
    fieldset {
@@ -82,7 +83,7 @@
 
    #other_topics {
         width: 100%;
-        height: 100px;
+        min-height: 100px;
    }
 
     input[placeholder="Required  "] {
