--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/*=============================== 
+      Base Element Styles
+  =============================== */
+
 * {
     box-sizing: border-box;
 }
@@ -27,14 +31,23 @@
     .banner {
         text-align: center;
         text-transform: uppercase;
-        background: rgb(36, 35, 35);
+        background: rgb(24, 24, 95);
         color: rgb(248, 248, 242);
         max-width: 100%;
         padding: 0.5rem;
     }
 
+    fieldset {
+        border: none;
+   }
+
+/*==============================
+      Base Layout Styles
+  ==============================*/
+
     .signup {
         text-align: center;
+        color: rgb(38, 13, 126);
         padding-top: 0.5em;
         padding-bottom: 0.5em;
         border-bottom: 4px solid black;
@@ -45,21 +58,34 @@
         border-top: 2px solid black;
     } 
 
-    .newsletter {
-        border-top: 2px solid black;
+    .contact-info {
+        border-bottom: 2px solid black;
+    }
+
+    .choices, 
+    .format, 
+    .topics, 
+    select {
+        color: rgb(127, 53, 170);
     } 
 
     .flex-pair {
         display: flex;
         flex-direction: column;
+        color: rgb(127, 53, 170);
     }
 
     legend {
         padding-top: 15px;
+        color: rgb(56, 22, 78);
         font-size: 1.4em;
         font-weight: 700;
         margin-bottom: 20px;
-    }  
+    } 
+    
+    .choices legend {
+        margin-bottom: 0;
+    }
 
     .contact-info input, 
     select, 
@@ -67,34 +93,26 @@
         height: 50px;
         margin-bottom: 15px;
         width: 100%;
-        background-color: rgb(248, 248, 242);
+        background-color: rgb(255, 246, 246);
     }
 
     input:focus,
     select:focus, 
     textarea:focus {
-        background: rgb(230, 230, 241);
-        transition: background-color 1000ms linear;
+        background: rgb(229, 229, 248);
+        transition: background-color 500ms linear;
     }
-
-   fieldset {
-        border: none;
-   }
 
    #other_topics {
         width: 100%;
         min-height: 100px;
    }
 
-    input[placeholder="Required "], 
-    input[placeholder="(123)456-7890 "] {
-        font-style: italic;
-        text-align: right;
-        font-size: 0.8em;
-     }
-
      input::placeholder {
          text-align: right;
+         color: rgb(127, 53, 170);
+         font-style: italic;
+         font-size: 0.7em;
      }
 
     #zip {
@@ -103,12 +121,12 @@
 
     .choices, 
     .format {
-        line-height: 2;
+        line-height: 2.0;
     }
 
     button {
         color: white;
-        background: rgb(44, 156, 128);
+        background:rgb(56, 22, 78);
         width: 100%;
         padding: 12px 0;
         margin: auto;
@@ -116,12 +134,16 @@
         cursor: pointer;
     }
 
+    /* ---- Footers ---- */
+
     .copyright {
         text-align: center;
         font-size: 0.75em;
     }
 
-    /* Media Query */
+  /*================================= 
+            Media Query
+    =================================*/
 
     @media (min-width: 768px) {
 
